@@ -22,8 +22,7 @@
 
 #include "ECSocket.h"
 
-
-#include "endianfix.h"
+#include "endianfix.h"		// For EndianSwap
 
 
 ECSocket::ECSocket()
@@ -32,104 +31,132 @@ ECSocket::ECSocket()
 	m_sock = new wxSocketClient();
 }
 
-ECSocket::ECSocket(wxSockAddress& address, wxSocketFlags flags)
+ECSocket::ECSocket(wxSockAddress& address, wxEvtHandler& handler, int id)
 {
 	m_type = AMULE_EC_SERVER;
-	m_sock = new wxSocketServer(address, flags);
+	m_sock = new wxSocketServer(address, wxSOCKET_WAITALL|wxSOCKET_REUSEADDR);
+#ifndef AMULE_DAEMON
+	if(m_sock->Ok()) {
+		// Setup the event handler and subscribe to connection events
+		m_sock->SetEventHandler(handler, id);
+		m_sock->SetNotify(wxSOCKET_CONNECTION_FLAG);
+		m_sock->Notify(true);
+	}
+#endif
 }
 
-void ECSocket::Read(uint8& i) {
-	m_sock->Read(&i, 1);
+ECSocket::~ECSocket()
+{
+	delete m_sock;
+}
+
+void ECSocket::Read(wxSocketBase *sock, uint8& i) {
+	sock->Read(&i, 1);
 };
 	
-void ECSocket::Write(const uint8& i) {
-	m_sock->Write(&i, 1);
+void ECSocket::Write(wxSocketBase *sock, const uint8& i) {
+	sock->Write(&i, 1);
 };
 
-void ECSocket::Read(uint16& i) {
-	m_sock->Read(&i, 2);
+void ECSocket::Read(wxSocketBase *sock, uint16& i) {
+	sock->Read(&i, 2);
 	ENDIAN_SWAP_I_16(i);
 };
 	
-void ECSocket::Write(const uint16& i) {
+void ECSocket::Write(wxSocketBase *sock, const uint16& i) {
 	int16 tmp = ENDIAN_SWAP_16(i);
-	m_sock->Write(&tmp, 2);
+	sock->Write(&tmp, 2);
 };
 
-void ECSocket::Read(uint32& i) {
-	m_sock->Read(&i, 4);
+void ECSocket::Read(wxSocketBase *sock, uint32& i) {
+	sock->Read(&i, 4);
 	ENDIAN_SWAP_I_32(i);
 };
 	
-void ECSocket::Write(const uint32& i) {
+void ECSocket::Write(wxSocketBase *sock, const uint32& i) {
 	int32 tmp = ENDIAN_SWAP_32(i);
-	m_sock->Write(&tmp, 4);
+	sock->Write(&tmp, 4);
 };
 
 #if 0
-void ECSocket::Read(uint64& i) {
-	m_sock->Read(&i, 8);
+void ECSocket::Read(wxSocketBase *sock, uint64& i) {
+	sock->Read(&i, 8);
 	ENDIAN_SWAP_I_64(i);
 };
 
-void ECSocket::Write(const uint64& v) {
+void ECSocket::Write(wxSocketBase *sock, const uint64& v) {
 	int64 tmp = ENDIAN_SWAP_32(v);
-	m_sock->Write(&tmp, 8);
+	sock->Write(&tmp, 8);
 };
 #endif
-	
-void ECSocket::Read(wxString& s) {
+
+void ECSocket::Read(wxSocketBase *sock, wxString& s) {
 	unsigned int msgBytes;
-	Read(msgBytes);
+	Read(sock, msgBytes);
 	char *utf8 = new char[msgBytes+1];
 	utf8[msgBytes] = 0;
 	unsigned int msgRemain = msgBytes;
 	unsigned int LastIO;
 	char *iobuf = utf8;
 	register int i = 0;
-	while(msgRemain) {
-		m_sock->Read(iobuf, msgRemain);
-		LastIO = m_sock->LastCount();
+	bool error = false;
+	while(msgRemain && !error) {
+		sock->Read(iobuf, msgRemain);
+		LastIO = sock->LastCount();
+		error = sock->Error();
 		msgRemain -= LastIO;
 		iobuf += LastIO;
 		++i;
 	}
 	s = wxString(wxConvUTF8.cMB2WX(utf8));
-//printf("read loop=%d, bytes=%d, original=%d\n", i, msgBytes, s.size());
+//printf("ECSocket::Read: loop=%d, bytes=%d, original=%d, msg=%s\n", i, msgBytes, s.size(), wxConvUTF8.cWX2MB(s.Left(40)));
 	delete [] utf8;
-	if(m_sock->Error()) {
+	if(sock->Error()) {
 		printf("Wrong wxString Reading Packet!\n");
 	}
 };
 
-void ECSocket::Write(const wxString& s) {
+void ECSocket::Write(wxSocketBase *sock, const wxString& s) {
 	const wxWX2MBbuf buf = wxConvUTF8.cWX2MB(s);
 	const char *utf8 = (const char *)buf;
 	unsigned int msgBytes = strlen(utf8);
-	Write(msgBytes);
+//printf("ECSocket::Write bytes=%d, original=%d, msg=%s\n", msgBytes, s.size(), wxConvUTF8.cWX2MB(s.Left(40)));
+	Write(sock, msgBytes);
 	unsigned int msgRemain = msgBytes;
 	unsigned int LastIO;
 	const char *iobuf = utf8;
 	register int i = 0;
-	while(msgRemain) {
-		m_sock->Write(iobuf, msgBytes);
-		LastIO = m_sock->LastCount();
+	bool error = false;
+	while(msgRemain && !error) {
+		sock->Write(iobuf, msgBytes);
+		LastIO = sock->LastCount();
+		error = sock->Error();
 		msgRemain -= LastIO;
 		iobuf += LastIO;
 		++i;
+//printf("i=%d, LastIO=%u, msgRemain=%u\n", i, LastIO, msgRemain);
+//if(i > 5) break;
 	}
-//printf("write loop=%d, bytes=%d, original=%d\n", i, msgBytes, s.size());
 };
 	
+//
+// Client SendRecvMsg()
+//
 wxString ECSocket::SendRecvMsg(const wxString &msg) {
-	m_sock->SetFlags(wxSOCKET_WAITALL);
-	Write(msg);
+	return SendRecvMsg(m_sock, msg);
+}
+
+//
+// Server SendRecvMsg()
+//
+wxString ECSocket::SendRecvMsg(wxSocketBase *sock, const wxString &msg) {
+	Write(sock, msg);
 	wxString response;
-	if (!m_sock->Error()) {
+	if (!sock->Error()) {
 		// Wait until data available (will also return if the connection is lost)
-		m_sock->WaitForRead(10);
-		if (m_sock->IsData()) {
-			Read(response);
+		sock->WaitForRead(10);
+		if (sock->IsData()) {
+			Read(sock, response);
 		}
 	}
 	return response;
